<resources>
    <string name="app_name">Code Mystery</string>
    <string name="code_title">Crack the code!</string>
    <string name="settings_image">settings image</string>
    <string name="notes_placeholder">Write notes here to help you think</string>

    <string name="activity_main">Main text</string>
    <string name="activity_settings">Here comes settings</string>
    <string name="activity_scoreboard">Here comes scoreboard</string>

    <string name="button_awesome">Click me for awesome toasts</string>
    <string name="button_activity_main">Enter code</string>
    <string name="button_activity_2">Go to Activity 3</string>

    <string name="expandable1_title">Hint 1</string>
    <string name="expandable1_desc">One correct, well placed</string>

    <string name="expandable2_title">Hint 2</string>
    <string name="expandable2_desc">One correct, wrong placed</string>

    <string name="expandable3_title">Hint 3</string>
    <string name="expandable3_desc">Two correct, wrong placed</string>

    <string name="expandable4_title">Hint 4</string>
    <string name="expandable4_desc">None correct</string>

    <string name="expandable5_title">Hint 5</string>
    <string name="expandable5_desc">One correct, wrong placed</string>

    <string name="attempt_solved">Yay! You have solved the puzzle</string>
    <string name="attempt_failed">Not the right code. Try again!</string>
    <string name="attempt_error">Please fill all three fields with numbers and try again.</string>
</resources>
