<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="240dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <!-- First tab begin
          <include layout="@layout/content_main" />
        -->
        <com.github.florent37.expansionpanel.ExpansionHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/expandable_title_bg"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:expansion_headerIndicator="@id/headerIndicator"
            app:expansion_layout="@id/expansionLayout"
            app:expansion_toggleOnClick="true">

            <!-- HEADER -->

            <TextView
                android:id="@+id/header1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="@string/expandable1_title"
                android:textColor="@color/expandable_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="160dp"
                android:text="@string/expandable1_desc"
                android:textColor="@color/expandable_title_desc" />

            <!-- HEADER INDICATOR -->

            <ImageView
                android:id="@+id/headerIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginLeft="16dp"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/ic_expansion_header_indicator_grey_24dp" />


        </com.github.florent37.expansionpanel.ExpansionHeader>

        <com.github.florent37.expansionpanel.ExpansionLayout
            android:id="@+id/expansionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/hint1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/expandable_content_bg"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/expandable_content" />

        </com.github.florent37.expansionpanel.ExpansionLayout>
        <!-- First tab end -->

        <!-- Second tab begin -->
        <com.github.florent37.expansionpanel.ExpansionHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/expandable_title_bg"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:expansion_headerIndicator="@id/headerIndicator2"
            app:expansion_layout="@id/expansionLayout2"
            app:expansion_toggleOnClick="true">

            <!-- HEADER -->

            <TextView
                android:id="@+id/header2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="@string/expandable2_title"
                android:textColor="@color/expandable_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="160dp"
                android:gravity="center"
                android:text="@string/expandable2_desc"
                android:textColor="@color/expandable_title_desc" />

            <!-- HEADER INDICATOR -->

            <ImageView
                android:id="@+id/headerIndicator2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginLeft="16dp"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/ic_expansion_header_indicator_grey_24dp" />


        </com.github.florent37.expansionpanel.ExpansionHeader>

        <com.github.florent37.expansionpanel.ExpansionLayout
            android:id="@+id/expansionLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/hint2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/expandable_content_bg"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/expandable_content" />

        </com.github.florent37.expansionpanel.ExpansionLayout>
        <!-- Second tab end -->

        <!-- Third tab start -->
        <com.github.florent37.expansionpanel.ExpansionHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/expandable_title_bg"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:expansion_headerIndicator="@id/headerIndicator3"
            app:expansion_layout="@id/expansionLayout3"
            app:expansion_toggleOnClick="true">

            <!-- HEADER -->

            <TextView
                android:id="@+id/header3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="@string/expandable3_title"
                android:textColor="@color/expandable_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="160dp"
                android:text="@string/expandable3_desc"
                android:textColor="@color/expandable_title_desc" />

            <!-- HEADER INDICATOR -->

            <ImageView
                android:id="@+id/headerIndicator3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginLeft="16dp"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/ic_expansion_header_indicator_grey_24dp" />


        </com.github.florent37.expansionpanel.ExpansionHeader>

        <com.github.florent37.expansionpanel.ExpansionLayout
            android:id="@+id/expansionLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EEE">

            <TextView
                android:id="@+id/hint3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/expandable_content_bg"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/expandable_content" />

        </com.github.florent37.expansionpanel.ExpansionLayout>
        <!-- Third tab end -->

        <!-- Fourth tab start -->
        <com.github.florent37.expansionpanel.ExpansionHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/expandable_title_bg"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:expansion_headerIndicator="@id/headerIndicator4"
            app:expansion_layout="@id/expansionLayout4"
            app:expansion_toggleOnClick="true">

            <!-- HEADER -->

            <TextView
                android:id="@+id/header4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="@string/expandable4_title"
                android:textColor="@color/expandable_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="160dp"
                android:text="@string/expandable4_desc"
                android:textColor="@color/expandable_title_desc" />

            <!-- HEADER INDICATOR -->

            <ImageView
                android:id="@+id/headerIndicator4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginLeft="16dp"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/ic_expansion_header_indicator_grey_24dp" />


        </com.github.florent37.expansionpanel.ExpansionHeader>

        <com.github.florent37.expansionpanel.ExpansionLayout
            android:id="@+id/expansionLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EEE">

            <TextView
                android:id="@+id/hint4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/expandable_content_bg"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/expandable_content" />

        </com.github.florent37.expansionpanel.ExpansionLayout>
        <!-- Fourth tab end -->

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>